# dd_rhelp

./: AUTHORS  ChangeLog  FAQ  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.en.desc  README.fr.desc  README.rst  THANKS  TODO  aclocal.m4  autogen.sh  configure  configure.in  dd_rhelp  dd_rhelp.test
autopack/: launch
doc/: example.txt
src/: dd_rhelp-sh
src/include/: GPL-sh  begin-sh.in  copyright-sh.in  end-sh.in  libcolor.sh  libcommon.sh  vars-sh.in
test/mock/einval/: dd_rescue  oracle  oracle2
test/mock/ending/: dd_rescue  oracle
test/mock/eof/: dd_rescue  oracle
test/mock/summary/: dd_rescue  oracle
