AC_INIT
AM_INIT_AUTOMAKE(dd_rhelp,0.0.5)
AC_PROG_INSTALL
AC_PATH_PROGS(BASH, bash)

if test -z "${BASH}"; then 
   echo "You need BASH to run this script... "
   exit 1
fi

EMAIL="vaab@free.fr"
AC_SUBST(EMAIL)
AUTHOR="LAB Valentin"
AC_SUBST(AUTHOR)
CR_DATE="2004"
AC_SUBST(CR_DATE)
EXE_NAME="dd_rhelp"
AC_SUBST(EXE_NAME)
STATE="beta"
AC_SUBST(STATE)
AC_OUTPUT(Makefile                \
	  src/include/begin-sh        \
	  src/include/copyright-sh    \
	  src/include/end-sh          \
          src/include/vars-sh         \
	  )
